fix: scrollbar height.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,7 @@
 
 ::-webkit-scrollbar {
 	width: 10px;
+	height: 10px;
 }
 
 ::-webkit-scrollbar-track {
